--- a/src/main/resources/templates/doctor/add_nurse.html
+++ b/src/main/resources/templates/doctor/add_nurse.html
@@ -96,9 +96,11 @@
             }
         }
     </style>
+
 </head>
 
 <body class="d-flex align-items-center justify-content-center">
+<div th:replace="fragments/sidebar :: doctorSidebar()"></div>
 
 <div class="container py-4">
 
