--- a/src/main/resources/templates/expenses/expense-list.html
+++ b/src/main/resources/templates/expenses/expense-list.html
@@ -12,6 +12,10 @@
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 
     <style>
+        .page-wrapper {
+            margin-right: 260px;
+            padding: 20px;
+        }
         body {
             background: #f5f7f9;
             font-family: Tajawal, sans-serif;
@@ -54,7 +58,9 @@
 
 <body class="p-3">
 
-<div class="container">
+<div th:replace="fragments/sidebar :: doctorSidebar()"></div>
+
+<div class="page-wrapper">
 
     <!-- Header -->
     <div class="d-flex flex-column flex-md-row justify-content-between align-items-md-center mb-3 gap-2">
