--- a/src/main/resources/templates/financial/add-expense.html
+++ b/src/main/resources/templates/financial/add-expense.html
@@ -8,6 +8,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.rtl.min.css" rel="stylesheet"/>
 
     <style>
+        .page-wrapper {
+            margin-right: 260px;
+            padding: 20px;
+        }
         body {
             background: #f1f3f5;
             font-family: 'Tajawal', sans-serif;
@@ -39,7 +43,9 @@
 
 <body class="p-3">
 
-<div class="container d-flex justify-content-center">
+<div th:replace="fragments/sidebar :: doctorSidebar()"></div>
+
+<div class="page-wrapper">
     <div class="col-12 col-md-8 col-lg-6">
 
         <div class="card p-4 mt-4">
