--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -60,7 +60,8 @@ background:#1b5e20; color:#fff; position:fixed; right:0; top:0; padding:20px;">
         </div>
 
         <li class="mb-3">
-            <a href="/chat" class="btn w-100 btn-light text-start position-relative">
+            <a href="javascript:void(0)" onclick="openChatPopup()"
+               class="btn w-100 btn-light text-start position-relative">
                 <i class="bi bi-chat-dots"></i> الشات
                 <span id="chatBadge"
                       class="position-absolute top-0 start-0 translate-middle badge rounded-pill bg-danger">
