Add chat popup fragment to multiple pages for enhanced communication

--- a/src/main/resources/templates/doctor/add_nurse.html
+++ b/src/main/resources/templates/doctor/add_nurse.html
@@ -101,6 +101,7 @@
 
 <body class="d-flex align-items-center justify-content-center">
 <div th:replace="fragments/sidebar :: doctorSidebar()"></div>
+<div th:replace="fragments/chat-popup :: chatPopupFragment"></div>
 
 <div class="container py-4">
 
