--- a/src/main/resources/templates/financial/add-expense.html
+++ b/src/main/resources/templates/financial/add-expense.html
@@ -44,6 +44,7 @@
 <body class="p-3">
 
 <div th:replace="fragments/sidebar :: doctorSidebar()"></div>
+<div th:replace="fragments/chat-popup :: chatPopupFragment"></div>
 
 <div class="page-wrapper">
     <div class="col-12 col-md-8 col-lg-6">
