--- a/src/main/resources/templates/doctor/current_visit.html
+++ b/src/main/resources/templates/doctor/current_visit.html
@@ -130,6 +130,7 @@
 
 <body class="p-3">
 <div th:replace="fragments/sidebar :: doctorSidebar()"></div>
+<div th:replace="fragments/chat-popup :: chatPopupFragment"></div>
 
 <div class="page-wrapper">
 
